log
ju., 28 de sep. de 2023 16:10:19: 
 tests:  0|4
total_score: 0/70
fd5b7de
ju., 28 de sep. de 2023 16:16:07: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
b6b6c43
ju., 28 de sep. de 2023 16:29:24: 
 heap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
86f51ca
ju., 28 de sep. de 2023 16:30:42: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
1f925be
ju., 28 de sep. de 2023 16:31:42: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
7754df8
ju., 28 de sep. de 2023 16:34:26: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:42:8: error: unused variable 'superior' [-Werror=unused-variable]
    int superior = pq -> size - 1 / 2;
        ^~~~~~~~
heap.c:41:8: error: unused variable 'inferior' [-Werror=unused-variable]
    int inferior = pq -> size;
        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2291091
ju., 28 de sep. de 2023 16:41:01: 
 heap.c | 15 +++++----------
 1 file changed, 5 insertions(+), 10 deletions(-)
 tests:  2|2
total_score: 20/70
4b6914b
vi.,  6 de oct. de 2023 18:46:03: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
d07a45c
vi.,  6 de oct. de 2023 18:47:32: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|2
total_score: 20/70
4608187
vi.,  6 de oct. de 2023 18:48:46: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|2
total_score: 25/70
0ebd2aa
vi.,  6 de oct. de 2023 18:51:16: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:44:8: error: unused variable 'parent' [-Werror=unused-variable]
    int parent = (i - 1) / 2;
        ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
97cfcbc
vi.,  6 de oct. de 2023 18:57:00: 
 heap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:4:0:
heap.c: In function 'heap_push':
heap.c:46:47: error: invalid type argument of '->' (have 'int')
    while(i > 0 && pq -> heapArray[i].priority -> pq -> heapArray[parent].priority)
                                               ^~
Compilation failed
8474f7b
vi.,  6 de oct. de 2023 19:01:00: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
6a5378f
vi.,  6 de oct. de 2023 19:05:07: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
c572b47
vi.,  6 de oct. de 2023 19:06:33: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|1
total_score: 45/70
c98663f
